--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       }
       #blink {
         font-weight: bold;
-        color: #ffc98f;
+        color: red;
         transition: 0.5s;
       }
       .mainCon {
